--- a/pages/18968.html
+++ b/pages/18968.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sibe Mardesic in nLab
+      Steenrod-Sitnikov homology in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sibe Mardesic
+      Steenrod-Sitnikov homology
   </h1>
 
 
@@ -308,131 +308,56 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong>Sibe Mardešić</strong> is a Croatian <a class='existingWikiWord' href='/nlab/show/topology'>topologist</a>, retired Professor at the University of Zagreb and a full member of Croatian Academy of Arts and Sciences (HAZU). His son Pavao Mardešić is also a mathematician, a specialist in the theory of (low dimensional) dynamical systems.</p>
+    <p>In order to establish an Alexander duality theorem for<br/>compact subsets of <math class='maruku-mathml' display='inline' id='mathml_fb241295316966f2abb8805605ed02fb53885e06_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>S^n</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/Norman+Steenrod'>Steenrod</a> introduced in 1940 a new type of<br/>homology of metric compacta; a summary of the construction is given in the entry, <a class='existingWikiWord' href='/nlab/show/Steenrod+homology'>Steenrod homology</a>. The same problem led K. A. Sitnikov in 1951 to an equivalent theory and in 1960 <a class='existingWikiWord' href='/nlab/show/John+Milnor'>J. Milnor</a> gave an axiomatic characterization of the reulting ‘Steenrod-Sitnikov homology’.</p>
 
-<p>A brief biography can be found in the article <a href='http://web.math.hr/glasnik/vol_42/mardesic.html'>HAPPY 80-th BIRTHDAY PROFESSOR MARDEŠIĆ</a>, in Glasnik Matematički, the journal that he helped to found.</p>
+<p>Several authors extended this to compact Hausdorff spaces and then Lisica and <span class='newWikiWord'>Mardesic<a href='/nlab/new/Mardesic'>?</a></span> gave a definition for arbitrary spaces.</p>
 
-<p>Most of Sibe Mardešić‘s important works are related to <a class='existingWikiWord' href='/nlab/show/shape+theory'>shape theory</a> and geometric topology, mainly in the approach via inverse systems, which he pioneered (there was also a parallel development by <a class='existingWikiWord' href='/nlab/show/Tim+Porter'>Tim Porter</a>). Sibe Mardešić wrote several monographs and edited several proceedings volumes in geometric topology and shape theory.</p>
+<h2 id='related_entries'>Related entries</h2>
 
 <ul>
 <li>
-<p>S. Mardešić, J. Segal, <em>Shape theory</em>, North Holland 1982.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Steenrod+homology'>Steenrod homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/strong+shape+theory'>strong shape</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/strong+homology'>strong homology</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li>
+<p>Ju. T. Lisica and S. Mardeši&amp;#263, Steenrod–Sitnikov homology for arbitrary spaces, Bull. Amer. Math. Soc. 9 (1983), 207–210.</p>
 </li>
 
 <li>
 <p>S. Mardešić, Strong shape and homology, Springer monographs in mathematics, 2000. xii+489 pp.</p>
 </li>
-
-<li>
-<p>HAZU pages: <a href='http://www.hazu.hr/Akademici/SMardesic.html'>Akademik Sibe Mardešić</a>, in Croatian; and <a href='http://www.hazu.hr/Akademici/SMardesic_bio.html'>bio data in English</a>.</p>
-</li>
-
-<li>
-<p>Ju. T. Lisica and S. Mardesic, Steenrod–Sitnikov homology for arbitrary spaces, Bull. Amer. Math. Soc. 9 (1983), 207–210;</p>
-</li>
-
-<li>
-<p>S. Mardešić and L. R. Rubin, Cell-like mappings and and non-metrizable compacta of finite cohomological dimension, Trans. Amer. Math. Soc. 311 (1989), 53–79;</p>
-</li>
-
-<li>
-<p>S. Mardešić, Nonvanishing derived limits in shape theory, Topology 35(1996), 521–532.</p>
-</li>
-
-<li>
-<p>S. Mardešić, Comparison of singular and Čech homology i locally connected spaces, Michigan Math. J. 6 (1959), 151–166.</p>
-</li>
-
-<li>
-<p>S. Mardešić, On covering dimension and inverse limits for compact spaces, Illinois J. Math. 4 (1960), 278–291.</p>
-</li>
-
-<li>
-<p>S. Mardešić, On the Hahn-Mazurkiewicz theorem in non-metric spaces, Proc. Amer. Math. Soc. 11 (1960), 929–937.</p>
-</li>
-
-<li>
-<p>S. Mardešić, J. Segal, epsilon-mappings onto polyhedra, Trans. Amer. Math. Soc. 109 (1963), 146–164.</p>
-</li>
-
-<li>
-<p>S. Mardešić, Images of ordered compacta are locally peripherally metric, Pacific J. Math. 23 (1967), 557–568.</p>
-</li>
-
-<li>
-<p>S. Mardešić, J. Segal, Shapes of compacta and ANR-systems, Fund. Math. 72 (1971), 41–59.</p>
-</li>
-
-<li>
-<p>S. Mardešić, Shapes for topological spaces, General Topology and its Appl. 3 (1973), 265–282.</p>
-</li>
-
-<li>
-<p>S. Mardešić, On the Whitehead theorem in shape theory I, Fund. Math. 91 (1976), 51–64.</p>
-</li>
-
-<li>
-<p>S. Mardešić, Approximate polyhedra, resolutions of maps and shape fibrations, Fund. Math. 114 (1981), 53–78.</p>
-</li>
-
-<li>
-<p>Ju. T. Lisica, S. Mardešić, Coherent prohomotopy and strong shape theory, Glasnik Mat. 19 (39) (1984), 335–399.</p>
-</li>
-
-<li>
-<p>Ju. T. Lisica, S. Mardešić, Strong homology of inverse systems of spaces, I, II, Topology and its Appl. 19 (1985), 29–43. 45–64.</p>
-</li>
-
-<li>
-<p>S. Mardešić, A. V. Prasolov, Strong homology is not additive, Trans. Amer. Math. Soc. 307 (1988), 725–744.</p>
-</li>
-
-<li>
-<p>S. Mardešić, L.R. Rubin, Approximate inverse systems of compacta and covering dimension, Pacific J. Math. 138 (1989), 129–144.</p>
-</li>
-
-<li>
-<p>S. Mardešić, T. Watanabe, Approximate resolutions of spaces and mappings, Glasnik Mat. 24 (1989), 587–637.</p>
-</li>
-
-<li>
-<p>S. Mardešić, Strong expansions and strong shape theory, Topology and its Appl. 38 (1991), 275–291.</p>
-</li>
-
-<li>
-<p>S. Mardešić, A. V. Prasolov, On strong homology of compact spaces, Topology and its Appl. 82 (1998), 327–354.</p>
-</li>
-
-<li>
-<p>S. Mardešić, Coherent homotopy and localization, Topology and its Appl. 94 (1999), 253–274.</p>
-</li>
 </ul>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
- 
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on January 27, 2018 02:53:09 
+  Created on January 27, 2018 02:58:20 
   by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
   (95.148.226.129)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sibe+Mardesic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sibe+Mardesic/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Sibe+Mardesic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sibe+Mardesic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Steenrod-Sitnikov+homology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Sibe+Mardesic" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Steenrod-Sitnikov+homology" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Sibe+Mardesic" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Steenrod-Sitnikov+homology" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sibe+Mardesic" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Steenrod-Sitnikov+homology" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
