--- a/pages/5162.html
+++ b/pages/5162.html
@@ -327,17 +327,20 @@ margin-left: 0em;
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on May  1, 2015 12:36:57 
-  by <a class="existingWikiWord" href="/nlab/show/Adeel+Khan+Yusufzai">Adeel Khan</a>
-  (77.9.46.149)
+  Revised on January 27, 2018 02:59:24 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (95.148.226.129)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Norman+Steenrod" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Norman+Steenrod/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Norman+Steenrod" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Norman+Steenrod" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Norman+Steenrod" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Norman+Steenrod/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Norman+Steenrod" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Norman+Steenrod" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
