--- a/pages/18968.html
+++ b/pages/18968.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>In order to establish an Alexander duality theorem for<br/>compact subsets of <math class='maruku-mathml' display='inline' id='mathml_42be0522abec97ef33f6def13e6643b7b6570e63_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>S^n</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/Norman+Steenrod'>Steenrod</a> introduced in 1940 a new type of<br/>homology of metric compacta; a summary of the construction is given in the entry, <a class='existingWikiWord' href='/nlab/show/Steenrod+homology'>Steenrod homology</a>. The same problem led K. A. Sitnikov in 1951 to an equivalent theory and in 1960 <a class='existingWikiWord' href='/nlab/show/John+Milnor'>J. Milnor</a> gave an axiomatic characterization of the reulting ‘Steenrod-Sitnikov homology’.</p>
+    <p>In order to establish an Alexander duality theorem for compact subsets of <math class='maruku-mathml' display='inline' id='mathml_8765e648eb25e612580b6e987fb0d035a507ede3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>S^n</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/Norman+Steenrod'>Steenrod</a> introduced in 1940 a new type of homology of metric compacta; a summary of the construction is given in the entry, <a class='existingWikiWord' href='/nlab/show/Steenrod+homology'>Steenrod homology</a>. The same problem led K. A. Sitnikov in 1951 to an equivalent theory and in 1960 <a class='existingWikiWord' href='/nlab/show/John+Milnor'>J. Milnor</a> gave an axiomatic characterization of the reulting ‘Steenrod-Sitnikov homology’.</p>
 
 <p>Several authors extended this to compact Hausdorff spaces and then Lisica and <a class='existingWikiWord' href='/nlab/show/Sibe+Mardesic'>Mardesic</a> gave a definition for arbitrary spaces.</p>
 
@@ -342,14 +342,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 27, 2018 04:47:43 
+  Revised on January 27, 2018 05:27:04 
   by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
   (95.148.226.129)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Steenrod-Sitnikov+homology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Steenrod-Sitnikov+homology/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Steenrod-Sitnikov+homology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Steenrod-Sitnikov+homology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Steenrod-Sitnikov+homology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Steenrod-Sitnikov+homology/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Steenrod-Sitnikov+homology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Steenrod-Sitnikov+homology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
