--- a/pages/11204.html
+++ b/pages/11204.html
@@ -499,7 +499,7 @@ margin-left: 0em;
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/computability'>computability</a></strong></p>
-<table><thead><tr><th></th><th>type I computability</th><th>type II computability</th></tr></thead><tbody><tr><td style='text-align: left;'>typical domain</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/natural+number'>natural numbers</a> <math class='maruku-mathml' display='inline' id='mathml_76d5f51aed69a6498016c7568b0d36371de50475_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N}</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Baire+space+of+sequences'>Baire space</a> of infinite sequences <math class='maruku-mathml' display='inline' id='mathml_76d5f51aed69a6498016c7568b0d36371de50475_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔹</mi><mo>=</mo><msup><mi>ℕ</mi> <mi>ℕ</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{B} = \mathbb{N}^{\mathbb{N}}</annotation></semantics></math></td></tr>
+<table><thead><tr><th></th><th>type I computability</th><th>type II computability</th></tr></thead><tbody><tr><td style='text-align: left;'>typical domain</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/natural+number'>natural numbers</a> <math class='maruku-mathml' display='inline' id='mathml_e555a1c4140897c6067f5e914b95277491b7fd83_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N}</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Baire+space+of+sequences'>Baire space</a> of infinite sequences <math class='maruku-mathml' display='inline' id='mathml_e555a1c4140897c6067f5e914b95277491b7fd83_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔹</mi><mo>=</mo><msup><mi>ℕ</mi> <mi>ℕ</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{B} = \mathbb{N}^{\mathbb{N}}</annotation></semantics></math></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/computable+function'>computable functions</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/partial+recursive+function'>partial recursive function</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/computable+function+%28analysis%29'>computable function (analysis)</a></td></tr>
 <tr><td style='text-align: left;'>type of <a class='existingWikiWord' href='/nlab/show/computability'>computable mathematics</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/recursive+mathematics'>recursive mathematics</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/computable+analysis'>computable analysis</a>, <a class='existingWikiWord' href='/nlab/show/Type+Two+Theory+of+Effectivity'>Type Two Theory of Effectivity</a></td></tr>
 <tr><td style='text-align: left;'>type of <a class='existingWikiWord' href='/nlab/show/realizability'>realizability</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/number+realizability'>number realizability</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/function+realizability'>function realizability</a></td></tr>
@@ -528,7 +528,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li id='Schroeder04'>Matthias Schröder, <em>Spaces Allowing Type-2 Complecity Theory Revisited</em>, 2004 (<a href='http://homepages.inf.ed.ac.uk/als/Research/Others/schroeder-mlq04.pdf'>pdf</a>)</li>
+<li id='Schroeder04'>Matthias Schröder, <em>Spaces Allowing Type-2 Complexity Theory Revisited</em>, 2004 (<a href='http://homepages.inf.ed.ac.uk/als/Research/Others/schroeder-mlq04.pdf'>pdf</a>)</li>
 </ul>
 
 <p>
@@ -536,14 +536,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  3, 2014 23:46:15 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.164)
+  Revised on January 27, 2018 23:48:31 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (149.142.227.241)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Type+Two+Theory+of+Effectivity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Type+Two+Theory+of+Effectivity/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Type+Two+Theory+of+Effectivity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Type+Two+Theory+of+Effectivity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Type+Two+Theory+of+Effectivity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Type+Two+Theory+of+Effectivity/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Type+Two+Theory+of+Effectivity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Type+Two+Theory+of+Effectivity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
