--- a/pages/17565.html
+++ b/pages/17565.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -310,7 +310,7 @@ margin-left: 0em;
 <div id="revision">
     <h3 id='idea'>Idea</h3>
 
-<p><strong>Logical schemes</strong> are geometric entities which relate to <a class='existingWikiWord' href='/nlab/show/first-order+theory'>first-order logical theories</a> in much the same way that algebraic <a class='existingWikiWord' href='/nlab/show/scheme'>schemes</a> relate to <a class='existingWikiWord' href='/nlab/show/ring'>commutative rings</a>.</p>
+<p><strong>Logical schemes</strong> are geometric entities which relate to <a class='existingWikiWord' href='/nlab/show/first-order+theory'>first-order logical theories</a> in much the same way that algebraic <a class='existingWikiWord' href='/nlab/show/scheme'>schemes</a> relate to <a class='existingWikiWord' href='/nlab/show/ring'>commutative rings</a>. In this framework <a class='existingWikiWord' href='/nlab/show/conceptual+completeness'>conceptual completeness</a> can be established.</p>
 
 <h3 id='references'>References</h3>
 
@@ -323,14 +323,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on July 27, 2016 04:58:30 
+  Revised on January 28, 2018 14:31:41 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (147.147.173.235)
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/logical+scheme" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/logical+scheme" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/logical+scheme/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/logical+scheme" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/logical+scheme" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
