--- a/pages/9344.html
+++ b/pages/9344.html
@@ -308,7 +308,261 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>… <a class='existingWikiWord' href='/nlab/show/homotopy+limit'>homotopy colimit</a> … <a class='existingWikiWord' href='/nlab/show/action+groupoid'>action groupoid</a> …. <a class='existingWikiWord' href='/nlab/show/quotient+stack'>quotient stack</a></p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='homotopy_theory'>Homotopy theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a></strong></p>
+
+<p>flavors: <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable</a>, <a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant</a>, <a class='existingWikiWord' href='/nlab/show/rational+homotopy+theory'>rational</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+homotopy+theory'>p-adic</a>, <a class='existingWikiWord' href='/nlab/show/proper+homotopy+theory'>proper</a>, <a class='existingWikiWord' href='/nlab/show/geometric+homotopy+type+theory'>geometric</a>, <a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos'>cohesive</a>, <a class='existingWikiWord' href='/nlab/show/directed+homotopy+theory'>directed</a>…</p>
+
+<p>models: <a class='existingWikiWord' href='/nlab/show/topological+homotopy+theory'>topological</a>, <a class='existingWikiWord' href='/nlab/show/simplicial+homotopy+theory'>simplicial</a>, <a class='existingWikiWord' href='/nlab/show/localic+homotopy+theory'>localic</a>, …</p>
+
+<p>see also <strong><a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a></strong></p>
+
+<p><strong>Introductions</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Introduction+to+Topology+--+2'>Introduction to Basic Homotopy Theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Introduction+to+Homotopy+Theory'>Introduction to Abstract Homotopy Theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+homotopy+types'>geometry of physics -- homotopy types</a></p>
+</li>
+</ul>
+
+<p><strong>Definitions</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>homotopy</a>, <a class='existingWikiWord' href='/nlab/show/higher+homotopy'>higher homotopy</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+type'>homotopy type</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Pi-algebra'>Pi-algebra</a>, <a class='existingWikiWord' href='/nlab/show/spherical+object'>spherical object and Pi(A)-algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+coherent+category+theory'>homotopy coherent category theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopical+category'>homotopical category</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+category'>model category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+of+fibrant+objects'>category of fibrant objects</a>, <a class='existingWikiWord' href='/nlab/show/cofibration+category'>cofibration category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Waldhausen+category'>Waldhausen category</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+category'>homotopy category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Ho%28Top%29'>Ho(Top)</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/homotopy+category+of+an+%28infinity%2C1%29-category'>homotopy category of an (∞,1)-category</a></li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Paths and cylinders</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>left homotopy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cylinder+object'>cylinder object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/mapping+cone'>mapping cone</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>right homotopy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/path+space+object'>path object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/mapping+cocone'>mapping cocone</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+universal+bundle'>universal bundle</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interval+object'>interval object</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+localization'>homotopy localization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infinitesimal+interval+object'>infinitesimal interval object</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Homotopy groups</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+group'>homotopy group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+group'>fundamental group</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+group+of+a+topos'>fundamental group of a topos</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Brown-Grossman+homotopy+group'>Brown-Grossman homotopy group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/categorical+homotopy+groups+in+an+%28infinity%2C1%29-topos'>categorical homotopy groups in an (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+homotopy+groups+in+an+%28infinity%2C1%29-topos'>geometric homotopy groups in an (∞,1)-topos</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid'>fundamental ∞-groupoid</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+groupoid'>fundamental groupoid</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+in+a+locally+infinity-connected+%28infinity%2C1%29-topos'>fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+of+a+locally+infinity-connected+%28infinity%2C1%29-topos'>fundamental ∞-groupoid of a locally ∞-connected (∞,1)-topos</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+%28infinity%2C1%29-category'>fundamental (∞,1)-category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+category'>fundamental category</a></li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Basic facts</strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+group+of+the+circle+is+the+integers'>fundamental group of the circle is the integers</a></li>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+theorem+of+covering+spaces'>fundamental theorem of covering spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Freudenthal+suspension+theorem'>Freudenthal suspension theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Blakers-Massey+theorem'>Blakers-Massey theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+homotopy+van+Kampen+theorem'>higher homotopy van Kampen theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/nerve+theorem'>nerve theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Whitehead+theorem'>Whitehead&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hurewicz+theorem'>Hurewicz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Galois+theory'>Galois theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+hypothesis'>homotopy hypothesis</a>-theorem</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>A <em>homotopy quotient</em> is a <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> (say of a <a class='existingWikiWord' href='/nlab/show/group'>group</a> <a class='existingWikiWord' href='/nlab/show/action'>action</a>) in the context of <em><a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a></em>.</p>
+
+<p>Hust as a <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> is a special case of <a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a>, so a homotopy quotient is a special case of <a class='existingWikiWord' href='/nlab/show/homotopy+limit'>homotopy colimit</a>.</p>
+
+<p>The homotopy quotient of a <a class='existingWikiWord' href='/nlab/show/group'>group</a> <a class='existingWikiWord' href='/nlab/show/action'>action</a> may be modeled by the corresponding <em><a class='existingWikiWord' href='/nlab/show/action+groupoid'>action groupoid</a></em>, which in the context of <a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a> means the corresponding <em><a class='existingWikiWord' href='/nlab/show/quotient+stack'>quotient stack</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -346,14 +600,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 16, 2017 07:09:36 
+  Revised on January 29, 2018 03:06:45 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (2001:638:700:e000:0:2:0:4da)
+  (213.30.232.146)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopy+quotient" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy+quotient/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/homotopy+quotient" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy+quotient" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homotopy+quotient" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy+quotient/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/homotopy+quotient" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy+quotient" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
